# PhotoBOMB

./: .gitignore  PRD.md  TECH_SPEC.md
analysis/: analyze_media.py  animate_clip.py  enhance_photos.py  film_video.py  ingest_audio.py  pyproject.toml  seed_music.py
analysis/darkroom_analysis/: audio.py  cache.py  enhance.py  exif_meta.py  gemini_vision.py  omni_media.py  segment.py  triage.py
analysis/tests/: test_analyze.py  test_audio.py  test_cache.py  test_enhance.py  test_omni_media.py  test_seed_music.py  test_segment.py  test_triage.py
docs/superpowers/plans/: 2026-07-14-darkroom-m0-renderer.md  2026-07-14-edl-workbench.md  2026-07-14-m1-darkroom-app.md  2026-07-15-dynamic-edits.md  2026-07-16-m2-dynamic-media.md
docs/superpowers/specs/: 2026-07-14-edl-workbench-design.md  2026-07-14-m1-intelligence-pipeline-design.md  2026-07-15-dynamic-edits-design.md  2026-07-16-m2-dynamic-media-design.md
orchestrator/: package-lock.json  package.json  tsconfig.json
orchestrator/scripts/: smoke.mjs
orchestrator/src/: contracts.test.ts  contracts.ts  cutout-stages.test.ts  direct.test.ts  enhance.test.ts  gemini.test.ts  gemini.ts  omni-stages.test.ts  paths.ts  pipeline.test.ts  pipeline.ts  produce.test.ts  test-fixtures.ts
prompts/: director_montage.md  producer.md
renderer/: .gitignore  package-lock.json  package.json  tsconfig.json
renderer/fixtures/: montage.json
renderer/scripts/: make-fixtures.mjs
renderer/server/: server.test.mjs  workbench-server.mjs
renderer/src/: Reel.tsx  Root.tsx  theme.ts
renderer/workbench/: index.html  vite.config.ts
(+59 files in other folders)
