[project]
name = "darkroom-analysis"
version = "0.1.0"
description = "Darkroom media/audio analysis workers"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "opencv-python-headless>=4.9",
    "imagehash>=4.3",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["darkroom_analysis"]
